tests/negativeTests/Modified_Hip-veTests/src/module/exp.cpp
#include <hip/hip_runtime.h>
extern "C" __global__ void hello_world(hipLaunchParm lp)
{
}

